# pytest-with-ci-pipeline

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  report_1.xml
.github/workflows/: ci.yaml  ci.yml
tests/: test_pytest.py
