[tool.poetry]
name = "bagulho"
version = "0.1.0"
description = ""
authors = ["Juan Carlos Leone Barreto <jc.leone98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.30"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.7"


[tool.pytest.ini_options]
markers = [
    "goiabada: marks tests as goiabada"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
